@@ -1,0 +1,7 @@
+(list 
+ (cons 'modelSwarm
+       (make-instance 'ModelSwarm
+                      #:worldXSize 80
+                      #:worldYSize 80
+                      #:seedProb 1.0F0
+                      #:bugDensity 0.02F0)))
